naive interpreter vision only in main_class::main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.16)
 
+
+
+
 project(Compiler)
+
+set(CMAKE_CXX_STANDARD 17)
+
 set(
     HEADERS
     ${Compiler_SOURCE_DIR}/driver/driver.hpp
@@ -56,10 +62,12 @@ add_executable(
     ${Compiler_SOURCE_DIR}/nterms/value/value.cpp
     ${Compiler_SOURCE_DIR}/nterms/declaration/declaration.cpp
     ${Compiler_SOURCE_DIR}/nterms/body/body.cpp
+    ${Compiler_SOURCE_DIR}/nterms/lvalue/lvalue.cpp
 
     ${Compiler_SOURCE_DIR}/visitor/gv_visitor.cpp
     ${Compiler_SOURCE_DIR}/visitor/optimization_visitor.cpp
     ${Compiler_SOURCE_DIR}/visitor/delete_visitor.cpp
+    ${Compiler_SOURCE_DIR}/visitor/interpreter_visitor.cpp
 
 )
 target_include_directories(Compiler PUBLIC
