--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,8 @@ tests/tree_making/test3.gv
 tests/tree_making/test3.png
 tests/tree_making/test4.gv
 tests/tree_making/test4.png
+tests/scope_tree/test1_expected.txt
+tests/scope_tree/test2_expected.txt
+tests/scope_tree/test3_expected.txt
+tests/scope_tree/test4_expected.txt
 
