--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,12 @@ Compiler.cbp
 Testing/
 
 /irtree/CMakeFiles/
+/tests/ir_tree_building/test1/ir_joja.txt
+/tests/ir_tree_building/test1/ir_Main.txt
+/tests/ir_tree_building/test2/ir_Main.txt
+/tests/ir_tree_building/test3/ir_Main.txt
+/tests/ir_tree_building/test4/ir_Main.txt
+/tests/ir_tree_building/test4/ir_neg.txt
+/tests/ir_tree_building/test4/ir_one.txt
+/tests/ir_tree_building/test4/ir_proizv.txt
+/tests/ir_tree_building/test4/ir_sum.txt
