--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,37 @@ Testing/
 /tests/ir_tree_building/test4/ir_one.txt
 /tests/ir_tree_building/test4/ir_proizv.txt
 /tests/ir_tree_building/test4/ir_sum.txt
+/ir_after_optimization_joja.txt
+/ir_after_optimization_Main.txt
+/ir_before_optimization_Main.txt
+/ir_before_optimization_joja.txt
+/tests/ir_tree_building/test1/ir_before_optimization_Main.txt
+/tests/ir_tree_building/test2/ir_before_optimization_double.txt
+/tests/ir_tree_building/test3/ir_after_optimization_Main.txt
+/tests/ir_tree_building/test4/ir_before_optimization_Main.txt
+/tests/ir_tree_building/test2/ir_after_optimization_Main.txt
+/tests/ir_tree_building/test3/ir_before_optimization_Main.txt
+/tests/ir_tree_building/test2/ir_before_optimization_square.txt
+/tests/ir_tree_building/test4/ir_before_optimization_neg.txt
+/tests/ir_tree_building/test2/ir_before_optimization_Main.txt
+/ir_after_optimization_Main.txt
+/tests/ir_tree_building/test4/ir_after_optimization_proizv.txt
+/tests/ir_tree_building/test4/ir_after_optimization_Main.txt
+/tests/ir_tree_building/test4/ir_after_optimization_one.txt
+/ir_after_optimization_joja.txt
+/ir_before_optimization_joja.txt
+/tests/ir_tree_building/test4/ir_before_optimization_proizv.txt
+/tests/ir_tree_building/test4/ir_after_optimization_sum.txt
+/tests/ir_tree_building/test4/ir_after_optimization_neg.txt
+/tests/ir_tree_building/test2/ir_after_optimization_inc.txt
+/tests/ir_tree_building/test4/ir_before_optimization_one.txt
+/ir_before_optimization_Main.txt
+/tests/ir_tree_building/test2/ir_after_optimization_double.txt
+/tests/ir_tree_building/test2/ir_before_optimization_inc.txt
+/tests/ir_tree_building/test4/ir_before_optimization_sum.txt
+/tests/ir_tree_building/test2/ir_after_optimization_square.txt
+/tests/ir_tree_building/test1/ir_before_optimization_joja.txt
+/tests/ir_tree_building/test1/ir_after_optimization_Main.txt
+/tests/ir_tree_building/test1/ir_before_optimization_foo.txt
+/tests/ir_tree_building/test1/ir_after_optimization_joja.txt
+/tests/ir_tree_building/test1/ir_after_optimization_foo.txt
